samples/_failures_safe/1761376567_aeaece_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_985d250b.c: In function ‘main’:
./samples/SAFE/__tmp_985d250b.c:165:42: error: expected ‘)’ at end of input
  165 |     for (size_t i = 0; i < token_count; i
      |         ~                                ^
      |                                          )
./samples/SAFE/__tmp_985d250b.c:165:5: error: expected declaration or statement at end of input
  165 |     for (size_t i = 0; i < token_count; i
      |     ^~~
